insert texts and buttons in the first section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 700 & display = swap "rel =" stylesheet ">
   </head>
   <body>
-    <section>
+    <section class="hero">
       <div>
-        <div>
-          <h1>We Ensure A Best Insurance Service</h1>
-          <p>We know how large objects will act, but things on a small scale just do not act that way.</p>
+        <div class="hero__box">
+          <h1 class="hero__title">We Ensure A Best Insurance Service</h1>
+          <p class="hero__subtitle">We know how large objects will act, but things on a small scale just do not act that way.</p>
+          <div class="button__box">
+            <a class="button" href="#">Get Quote Now</a>
+            <a class="button--inverted" href="#">Learn More</a>
+          </div>
         </div>
       </div>
     </section>
