fix button placement and colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="hero__box">
           <h1 class="hero__title">We Ensure A Best Insurance Service</h1>
           <p class="hero__subtitle">We know how large objects will act, but things on a small scale just do not act that way.</p>
-          <div class="button__box">
+          <div class="hero__button">
             <a class="button" href="#">Get Quote Now</a>
             <a class="button--inverted" href="#">Learn More</a>
           </div>
