insert cards into hero section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
             <a class="button" href="#">Get Quote Now</a>
             <a class="button--inverted" href="#">Learn More</a>
           </div>
+          <div class="hero__card__main">
+            <div class="hero__card">
+              <img src="./images/user-blue.png">
+              <p class="hero__card__title">Peace of Mind</p>
+              <p class="hero__card__subtitle">the quick fox jumps over the lazy dog</p>
+            </div>
+            <div class="hero__card">
+              <img src="./images/user-blue.png">
+              <p class="hero__card__title">Set For Life</p>
+              <p class="hero__card__subtitle">the quick fox jumps over the lazy dog</p>
+            </div>
+            <div class="hero__card--inverted">
+              <img src="./images/user-white.png">
+              <p class="hero__card__title--inverted">100% Satisfaction</p>
+              <p class="hero__card__subtitle--inverted">the quick fox jumps over the lazy dog</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
