--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<htm>
+<html>
   <head>
     <title>Mobile Firts</title>
     <link href="./styles/reset.css"rel="stylesheet"/>
@@ -38,4 +38,4 @@
       </div>
     </section>
   </body>
-</htm>
+</html>
