add new content section mobile version

--- a/index.html
+++ b/index.html
@@ -37,5 +37,27 @@
         </div>
       </div>
     </section>
+
+    <section class="content">
+      <div>
+        <div class="content__box">
+          <img class="content__image" src="./images/vector-1.png">
+          <h1 class="content__title">Peace of Mind</h1>
+          <p class="content__subtitle">So it really behaves like neither. Now we have given up.</p>
+        </div>
+        <div class="content__box">
+          <img class="content__image" src="./images/vector-2.png">
+          <h1 class="content__title">Set For Life</h1>
+          <p class="content__subtitle">They were used to create the machines that launched </p>
+        </div>
+        <div class="content__box">
+          <img class="content__image" src="./images/user-blue.png">
+          <h1 class="content__title">100% Satisfaction</h1>
+          <p class="content__subtitle">So it really behaves like neither. Now we have given up.</p>
+        </div>
+
+      </div>
+
+    </section>
   </body>
 </html>
