add media queries desktop version in the content section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="content">
-      <div>
+      <div class="content__main">
         <div class="content__box">
           <img class="content__image" src="./images/vector-1.png">
           <h1 class="content__title">Peace of Mind</h1>
