add new mobile version testimonials section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
           <h1 class="content__title">100% Satisfaction</h1>
           <p class="content__subtitle">So it really behaves like neither. Now we have given up.</p>
         </div>
+      </div>
+    </section>
+
+    <section class="depositions">
+      <div class="depositions__box">
+        <h1 class="depositions__title">Industry</h1>
+        <p class="depositions__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
+      </div>
+      <div class="depositions__main">
+        <div class="depositions__card">
+          <img class="depositions__image" src="./images/user-1.png">
+          <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          <img src="./images/stars.png">
+        </div>
+        <div class="depositions__card">
+          <img class="depositions__image" src="./images/user-2.png">
+          <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          <img src="./images/stars.png">
+        </div>
+        <div class="depositions__card">
+          <img class="depositions__image" src="./images/user-3.png">
+          <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          <img src="./images/stars.png">
+        </div>
 
       </div>
 
