add new mobile version partners section

--- a/index.html
+++ b/index.html
@@ -79,9 +79,44 @@
           <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           <img src="./images/stars.png">
         </div>
-
       </div>
-
     </section>
+
+      <section class="partners">
+        <div class="partners__container">
+          <div>
+            <img src="./images/partners-1.png">
+          </div>
+          <div>
+            <img src="./images/partners-2.png">
+          </div>
+          <div>
+            <img src="./images/partners-3.png">
+          </div>
+          <div>
+            <img src="./images/partners-4.png">
+          </div>
+          <div>
+            <img src="./images/partners-5.png">
+          </div>
+          <div>
+            <img src="./images/partners-6.png">
+          </div>
+        </div>
+
+        <div class="partners__form">
+          <div class="partners__text">
+            <p>Subscribe For Latest Newsletter</p>
+          </div>
+          <div class="partners__box">
+            <input class="partners__input" type= "text" placeholder="Your Email">
+            <button class="partners__button">Subscribe</button>
+          </div>
+        </div>
+
+
+
+
+      </section>
   </body>
 </html>
