--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
       <section class="partners">
         <div class="partners__container">
           <div>
-            <img src="./images/partners-1.png">
+            <img class="partners__image" src="./images/partners-1.png">
           </div>
           <div>
-            <img src="./images/partners-2.png">
+            <img class="partners__image" src="./images/partners-2.png">
           </div>
           <div>
-            <img src="./images/partners-3.png">
+            <img class="partners__image" src="./images/partners-3.png">
           </div>
           <div>
-            <img src="./images/partners-4.png">
+            <img class="partners__image" src="./images/partners-4.png">
           </div>
           <div>
-            <img src="./images/partners-5.png">
+            <img class="partners__image" src="./images/partners-5.png">
           </div>
           <div>
-            <img src="./images/partners-6.png">
+            <img class="partners__image" src="./images/partners-6.png">
           </div>
         </div>
 
         <div class="partners__form">
-          <div class="partners__text">
-            <p>Subscribe For Latest Newsletter</p>
+           <div class="partners__text">
+            <p>Subscribe For Latest <br> Newsletter</p>
           </div>
           <div class="partners__box">
             <input class="partners__input" type= "text" placeholder="Your Email">
