add new benefit packs section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
             <img class="partners__image" src="./images/partners-6.png">
           </div>
         </div>
-
         <div class="partners__form">
            <div class="partners__text">
             <p>Subscribe For Latest <br> Newsletter</p>
@@ -113,10 +112,42 @@
             <button class="partners__button">Subscribe</button>
           </div>
         </div>
-
-
-
-
       </section>
+
+      <section class="packages">
+        <div class="packages__box">
+          <h1 class="packages__title">Pricing</h1>
+          <p class="packages__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
+        </div>
+        <div>
+          <div class="packages__card__box">
+            <p class="packages__card__title">FREE</p>
+            <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
+            <div class="packages__card__container">
+              <span class="packages__card__price">0</span>
+              <div class="packages__card__value">
+                <span class="packages__card__cifrao">$</span>
+                <span class="packages__card__month">Per Month</span>
+              </div>
+            </div>
+            <div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
   </body>
 </html>
