--- a/index.html
+++ b/index.html
@@ -119,35 +119,126 @@
           <h1 class="packages__title">Pricing</h1>
           <p class="packages__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
         </div>
-        <div>
-          <div class="packages__card__box">
-            <p class="packages__card__title">FREE</p>
-            <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
-            <div class="packages__card__container">
-              <span class="packages__card__price">0</span>
-              <div class="packages__card__value">
-                <span class="packages__card__cifrao">$</span>
-                <span class="packages__card__month">Per Month</span>
+
+        <div class="packages__card">
+          <div>
+            <div class="packages__card__box">
+              <p class="packages__card__title">FREE</p>
+              <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
+              <div class="packages__card__container">
+                <span class="packages__card__price">0</span>
+                <div class="packages__card__value">
+                  <span class="packages__card__cifrao">$</span>
+                  <span class="packages__card__month">Per Month</span>
+                </div>
               </div>
-            </div>
-            <div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
+              <div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-ok.png">
+                  <p>Unlimited product updates</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-ok.png">
+                  <p>Unlimited product updates</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-ok.png">
+                  <p>Unlimited product updates</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-gray.png">
+                  <p>1GB Cloud storage</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-gray.png">
+                  <p>Email and community support</p>
+                </div>
               </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
+              <div class="packages__card__button">
+                <a class="button--modifier" href="#">Try for free</a>
               </div>
             </div>
           </div>
 
+          <div>
+            <div class="packages__card__box--inverted">
+              <p class="packages__card__title--inverted">STANDARD</p>
+              <p class="packages__card__subtitle--inverted">Organize across all <br> apps by hand</p>
+              <div class="packages__card__container">
+                <span class="packages__card__price">9.99</span>
+                <div class="packages__card__value">
+                  <span class="packages__card__cifrao">$</span>
+                  <span class="packages__card__month">Per Month</span>
+                </div>
+              </div>
+              <div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-ok.png">
+                  <p>Unlimited product updates</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-ok.png">
+                  <p>Unlimited product updates</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-ok.png">
+                  <p>Unlimited product updates</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-gray.png">
+                  <p>1GB Cloud storage</p>
+                </div>
+                <div class="packages__card__image">
+                  <img src="./images/vector-gray.png">
+                  <p>Email and community support</p>
+                </div>
+              </div>
+              <div class="packages__card__button">
+                <a class="button--modifier" href="#">Try for free</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="packages__card">
+            <div>
+              <div class="packages__card__box">
+                <p class="packages__card__title">PREMIUM</p>
+                <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
+                <div class="packages__card__container">
+                  <span class="packages__card__price">19.99</span>
+                  <div class="packages__card__value">
+                    <span class="packages__card__cifrao">$</span>
+                    <span class="packages__card__month">Per Month</span>
+                  </div>
+                </div>
+                <div>
+                  <div class="packages__card__image">
+                    <img src="./images/vector-ok.png">
+                    <p>Unlimited product updates</p>
+                  </div>
+                  <div class="packages__card__image">
+                    <img src="./images/vector-ok.png">
+                    <p>Unlimited product updates</p>
+                  </div>
+                  <div class="packages__card__image">
+                    <img src="./images/vector-ok.png">
+                    <p>Unlimited product updates</p>
+                  </div>
+                  <div class="packages__card__image">
+                    <img src="./images/vector-gray.png">
+                    <p>1GB Cloud storage</p>
+                  </div>
+                  <div class="packages__card__image">
+                    <img src="./images/vector-gray.png">
+                    <p>Email and community support</p>
+                  </div>
+                </div>
+                <div class="packages__card__button">
+                  <a class="button--modifier" href="#">Try for free</a>
+                </div>
+              </div>
+            </div>
         </div>
       </section>
-
   </body>
 </html>
