add new branch section mobile version

--- a/index.html
+++ b/index.html
@@ -240,5 +240,16 @@
             </div>
         </div>
       </section>
+
+      <section class="world">
+        <div>
+          <h1 class="world__title">We Have Branches All Over The World</h1>
+          <p class="world__subtitle">The gradual accumulation of information about atomic and small-scale behaviour during the first quarter of the 20th century, which gave some indications about how small things do behave, produced an increasing confusion which was Heisenberg, and Born.</p>
+        </div>
+        <div>
+          <img class="world__image" src="./images/world.png">
+        </div>
+
+      </section>
   </body>
 </html>
