fix world section media queries desktop version

--- a/index.html
+++ b/index.html
@@ -243,11 +243,13 @@
 
       <section class="world">
         <div class="world__box">
-          <div>
+          <div class="world__center">
             <h1 class="world__title">We Have Branches All Over The World</h1>
             <p class="world__subtitle">The gradual accumulation of information about atomic and small-scale behaviour during the first quarter of the 20th century, which gave some indications about how small things do behave, produced an increasing confusion which was Heisenberg, and Born.</p>
           </div>
-          <img class="world__image" src="./images/world.png">
+          <div class="world__image">
+            <img class="world__figure" src="./images/world.png">
+          </div>
         </div>
       </section>
   </body>
