add new budget section

--- a/index.html
+++ b/index.html
@@ -252,5 +252,35 @@
           </div>
         </div>
       </section>
+
+      <section class="register">
+        <img class="register__image" src="./images/family-register.png">
+        <div class="register__main">
+          <h1 class="register__title">Get A Free Quote Here</h1>
+          <div class="register__form">
+            <div class="register__form__label">
+              <label class="register__form__text">Name*</label>
+              <input class="register__form__input" type="text" placeholder="Full Name">
+            </div>
+            <div class="register__form__label">
+              <label class="register__form__text">Email*</label>
+              <input class="register__form__input" type="text" placeholder="example@gmail.com">
+            </div>
+            <div class="register__form__label">
+              <label class="register__form__text">Department*</label>
+              <select class="register__form__input">
+                <option>Please Select</option>
+                <option>Technology</option>
+                <option>Cheers</option>
+                <option>Administrative</option>
+              </select>
+            </div>
+            <div class="register__form__label">
+              <label class="register__form__text">Time*</label>
+              <input class="register__form__input" type="text" placeholder="4:00 Available">
+            </div>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
