add button in registration section

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <select class="register__form__input">
                 <option>Please Select</option>
                 <option>Technology</option>
-                <option>Cheers</option>
+                <option>Health</option>
                 <option>Administrative</option>
               </select>
             </div>
@@ -279,6 +279,9 @@
               <label class="register__form__text">Time*</label>
               <input class="register__form__input" type="text" placeholder="4:00 Available">
             </div>
+          </div>
+          <div class="register__button">
+            <a class="button--modifier" href="#">Book Appointment</a>
           </div>
         </div>
       </section>
