--- a/index.html
+++ b/index.html
@@ -254,34 +254,36 @@
       </section>
 
       <section class="register">
-        <img class="register__image" src="./images/family-register.png">
-        <div class="register__main">
-          <h1 class="register__title">Get A Free Quote Here</h1>
-          <div class="register__form">
-            <div class="register__form__label">
-              <label class="register__form__text">Name*</label>
-              <input class="register__form__input" type="text" placeholder="Full Name">
+        <div class="register__first">
+          <div class="register__image"></div>
+          <div class="register__main">
+            <h1 class="register__title">Get A Free Quote Here</h1>
+            <div class="register__form">
+              <div class="register__form__label">
+                <label class="register__form__text">Name*</label>
+                <input class="register__form__input" type="text" placeholder="Full Name">
+              </div>
+              <div class="register__form__label">
+                <label class="register__form__text">Email*</label>
+                <input class="register__form__input" type="text" placeholder="example@gmail.com">
+              </div>
+              <div class="register__form__label">
+                <label class="register__form__text">Department*</label>
+                <select class="register__form__input">
+                  <option>Please Select</option>
+                  <option>Technology</option>
+                  <option>Health</option>
+                  <option>Administrative</option>
+                </select>
+              </div>
+              <div class="register__form__label">
+                <label class="register__form__text">Time*</label>
+                <input class="register__form__input" type="text" placeholder="4:00 Available">
+              </div>
             </div>
-            <div class="register__form__label">
-              <label class="register__form__text">Email*</label>
-              <input class="register__form__input" type="text" placeholder="example@gmail.com">
+            <div class="register__button">
+              <a class="button--modifier" href="#">Book Appointment</a>
             </div>
-            <div class="register__form__label">
-              <label class="register__form__text">Department*</label>
-              <select class="register__form__input">
-                <option>Please Select</option>
-                <option>Technology</option>
-                <option>Health</option>
-                <option>Administrative</option>
-              </select>
-            </div>
-            <div class="register__form__label">
-              <label class="register__form__text">Time*</label>
-              <input class="register__form__input" type="text" placeholder="4:00 Available">
-            </div>
-          </div>
-          <div class="register__button">
-            <a class="button--modifier" href="#">Book Appointment</a>
           </div>
         </div>
       </section>
