fix the button class and media queries register section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="./styles/styles.css"rel="stylesheet"/>
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com"   crossorigin>
-    <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 700 & display = swap "rel =" stylesheet ">
+    <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 700 & display = swap "rel ="stylesheet">
   </head>
   <body>
     <section class="hero">
@@ -15,7 +15,7 @@
           <p class="hero__subtitle">We know how large objects will act, but things on a small scale just do not act that way.</p>
           <div class="hero__button">
             <a class="button" href="#">Get Quote Now</a>
-            <a class="button--inverted" href="#">Learn More</a>
+            <a class="button button--inverted" href="#">Learn More</a>
           </div>
           <div class="hero__card__main">
             <div class="hero__card">
@@ -155,7 +155,7 @@
                 </div>
               </div>
               <div class="packages__card__button">
-                <a class="button--modifier" href="#">Try for free</a>
+                <a class="button" href="#">Try for free</a>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
                 </div>
               </div>
               <div class="packages__card__button">
-                <a class="button--modifier" href="#">Try for free</a>
+                <a class="button" href="#">Try for free</a>
               </div>
             </div>
           </div>
@@ -234,7 +234,7 @@
                   </div>
                 </div>
                 <div class="packages__card__button">
-                  <a class="button--modifier" href="#">Try for free</a>
+                  <a class="button" href="#">Try for free</a>
                 </div>
               </div>
             </div>
@@ -258,31 +258,31 @@
           <div class="register__image"></div>
           <div class="register__main">
             <h1 class="register__title">Get A Free Quote Here</h1>
-            <div class="register__form">
-              <div class="register__form__label">
-                <label class="register__form__text">Name*</label>
-                <input class="register__form__input" type="text" placeholder="Full Name">
+            <div>
+              <div class="register__label">
+                <label class="register__text">Name*</label>
+                <input class="register__input" type="text" placeholder="Full Name">
               </div>
-              <div class="register__form__label">
-                <label class="register__form__text">Email*</label>
-                <input class="register__form__input" type="text" placeholder="example@gmail.com">
+              <div class="register__label">
+                <label class="register__text">Email*</label>
+                <input class="register__input" type="text" placeholder="example@gmail.com">
               </div>
-              <div class="register__form__label">
-                <label class="register__form__text">Department*</label>
-                <select class="register__form__input">
+              <div class="register__label">
+                <label class="register__text">Department*</label>
+                <select class="register__input">
                   <option>Please Select</option>
                   <option>Technology</option>
                   <option>Health</option>
                   <option>Administrative</option>
                 </select>
               </div>
-              <div class="register__form__label">
-                <label class="register__form__text">Time*</label>
-                <input class="register__form__input" type="text" placeholder="4:00 Available">
+              <div class="register__label">
+                <label class="register__text">Time*</label>
+                <input class="register__input" type="text" placeholder="4:00 Available">
               </div>
             </div>
             <div class="register__button">
-              <a class="button--modifier" href="#">Book Appointment</a>
+              <a class="button button--full" href="#">Book Appointment</a>
             </div>
           </div>
         </div>
