--- a/index.html
+++ b/index.html
@@ -82,51 +82,129 @@
       </div>
     </section>
 
-      <section class="partners">
-        <div class="partners__container">
-          <div>
-            <img class="partners__image" src="./images/partners-1.png">
-          </div>
-          <div>
-            <img class="partners__image" src="./images/partners-2.png">
-          </div>
-          <div>
-            <img class="partners__image" src="./images/partners-3.png">
-          </div>
-          <div>
-            <img class="partners__image" src="./images/partners-4.png">
-          </div>
-          <div>
-            <img class="partners__image" src="./images/partners-5.png">
-          </div>
-          <div>
-            <img class="partners__image" src="./images/partners-6.png">
-          </div>
+    <section class="partners">
+      <div class="partners__container">
+        <div>
+          <img class="partners__image" src="./images/partners-1.png">
         </div>
-        <div class="partners__form">
-           <div class="partners__text">
-            <p>Subscribe For Latest <br> Newsletter</p>
-          </div>
-          <div class="partners__box">
-            <input class="partners__input" type= "text" placeholder="Your Email">
-            <button class="partners__button">Subscribe</button>
-          </div>
+        <div>
+          <img class="partners__image" src="./images/partners-2.png">
         </div>
-      </section>
+        <div>
+          <img class="partners__image" src="./images/partners-3.png">
+        </div>
+        <div>
+          <img class="partners__image" src="./images/partners-4.png">
+        </div>
+        <div>
+          <img class="partners__image" src="./images/partners-5.png">
+        </div>
+        <div>
+          <img class="partners__image" src="./images/partners-6.png">
+        </div>
+      </div>
+      <div class="partners__form">
+        <div class="partners__text">
+          <p>Subscribe For Latest <br> Newsletter</p>
+        </div>
+        <div class="partners__box">
+          <input class="partners__input" type= "text" placeholder="Your Email">
+          <button class="partners__button">Subscribe</button>
+        </div>
+      </div>
+    </section>
 
-      <section class="packages">
-        <div class="packages__box">
-          <h1 class="packages__title">Pricing</h1>
-          <p class="packages__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
+    <section class="packages">
+      <div class="packages__box">
+        <h1 class="packages__title">Pricing</h1>
+        <p class="packages__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
+      </div>
+      <div class="packages__card">
+        <div>
+          <div class="packages__card__box">
+            <p class="packages__card__title">FREE</p>
+            <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
+            <div class="packages__card__container">
+              <span class="packages__card__price">0</span>
+              <div class="packages__card__value">
+                <span class="packages__card__cifrao">$</span>
+                <span class="packages__card__month">Per Month</span>
+              </div>
+            </div>
+            <div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-gray.png">
+                <p>1GB Cloud storage</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-gray.png">
+                <p>Email and community support</p>
+              </div>
+            </div>
+            <div class="packages__card__button">
+              <a class="button" href="#">Try for free</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <div class="packages__card__box--inverted">
+            <p class="packages__card__title--inverted">STANDARD</p>
+            <p class="packages__card__subtitle--inverted">Organize across all <br> apps by hand</p>
+            <div class="packages__card__container">
+              <span class="packages__card__price">9.99</span>
+              <div class="packages__card__value">
+                <span class="packages__card__cifrao">$</span>
+                <span class="packages__card__month">Per Month</span>
+              </div>
+            </div>
+            <div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-gray.png">
+                <p>1GB Cloud storage</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-gray.png">
+                <p>Email and community support</p>
+              </div>
+            </div>
+            <div class="packages__card__button">
+              <a class="button" href="#">Try for free</a>
+            </div>
+          </div>
         </div>
 
         <div class="packages__card">
           <div>
             <div class="packages__card__box">
-              <p class="packages__card__title">FREE</p>
+              <p class="packages__card__title">PREMIUM</p>
               <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
               <div class="packages__card__container">
-                <span class="packages__card__price">0</span>
+                <span class="packages__card__price">19.99</span>
                 <div class="packages__card__value">
                   <span class="packages__card__cifrao">$</span>
                   <span class="packages__card__month">Per Month</span>
@@ -159,133 +237,162 @@
               </div>
             </div>
           </div>
+      </div>
+    </section>
 
+    <section class="world">
+      <div class="world__box">
+        <div class="world__center">
+          <h1 class="world__title">We Have Branches All Over The World</h1>
+          <p class="world__subtitle">The gradual accumulation of information about atomic and small-scale behaviour during the first quarter of the 20th century, which gave some indications about how small things do behave, produced an increasing confusion which was Heisenberg, and Born.</p>
+          </div>
+        <div class="world__image">
+          <img class="world__figure" src="./images/world.png">
+        </div>
+      </div>
+    </section>
+
+    <section class="register">
+      <div class="register__first">
+        <div class="register__image"></div>
+        <div class="register__main">
+          <h1 class="register__title">Get A Free Quote Here</h1>
           <div>
-            <div class="packages__card__box--inverted">
-              <p class="packages__card__title--inverted">STANDARD</p>
-              <p class="packages__card__subtitle--inverted">Organize across all <br> apps by hand</p>
-              <div class="packages__card__container">
-                <span class="packages__card__price">9.99</span>
-                <div class="packages__card__value">
-                  <span class="packages__card__cifrao">$</span>
-                  <span class="packages__card__month">Per Month</span>
-                </div>
-              </div>
-              <div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-ok.png">
-                  <p>Unlimited product updates</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-ok.png">
-                  <p>Unlimited product updates</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-ok.png">
-                  <p>Unlimited product updates</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-gray.png">
-                  <p>1GB Cloud storage</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-gray.png">
-                  <p>Email and community support</p>
-                </div>
-              </div>
-              <div class="packages__card__button">
-                <a class="button" href="#">Try for free</a>
-              </div>
+            <div class="register__label">
+              <label class="register__text">Name*</label>
+              <input class="register__input" type="text" placeholder="Full Name">
+            </div>
+            <div class="register__label">
+              <label class="register__text">Email*</label>
+              <input class="register__input" type="text" placeholder="example@gmail.com">
+            </div>
+            <div class="register__label">
+              <label class="register__text">Department*</label>
+              <select class="register__input">
+                <option>Please Select</option>
+                <option>Technology</option>
+                <option>Health</option>
+                <option>Administrative</option>
+              </select>
+            </div>
+            <div class="register__label">
+              <label class="register__text">Time*</label>
+              <input class="register__input" type="text" placeholder="4:00 Available">
             </div>
           </div>
-
-          <div class="packages__card">
-            <div>
-              <div class="packages__card__box">
-                <p class="packages__card__title">PREMIUM</p>
-                <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
-                <div class="packages__card__container">
-                  <span class="packages__card__price">19.99</span>
-                  <div class="packages__card__value">
-                    <span class="packages__card__cifrao">$</span>
-                    <span class="packages__card__month">Per Month</span>
-                  </div>
-                </div>
-                <div>
-                  <div class="packages__card__image">
-                    <img src="./images/vector-ok.png">
-                    <p>Unlimited product updates</p>
-                  </div>
-                  <div class="packages__card__image">
-                    <img src="./images/vector-ok.png">
-                    <p>Unlimited product updates</p>
-                  </div>
-                  <div class="packages__card__image">
-                    <img src="./images/vector-ok.png">
-                    <p>Unlimited product updates</p>
-                  </div>
-                  <div class="packages__card__image">
-                    <img src="./images/vector-gray.png">
-                    <p>1GB Cloud storage</p>
-                  </div>
-                  <div class="packages__card__image">
-                    <img src="./images/vector-gray.png">
-                    <p>Email and community support</p>
-                  </div>
-                </div>
-                <div class="packages__card__button">
-                  <a class="button" href="#">Try for free</a>
-                </div>
-              </div>
-            </div>
-        </div>
-      </section>
-
-      <section class="world">
-        <div class="world__box">
-          <div class="world__center">
-            <h1 class="world__title">We Have Branches All Over The World</h1>
-            <p class="world__subtitle">The gradual accumulation of information about atomic and small-scale behaviour during the first quarter of the 20th century, which gave some indications about how small things do behave, produced an increasing confusion which was Heisenberg, and Born.</p>
-          </div>
-          <div class="world__image">
-            <img class="world__figure" src="./images/world.png">
+          <div class="register__button">
+            <a class="button button--full" href="#">Book Appointment</a>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="register">
-        <div class="register__first">
-          <div class="register__image"></div>
-          <div class="register__main">
-            <h1 class="register__title">Get A Free Quote Here</h1>
-            <div>
-              <div class="register__label">
-                <label class="register__text">Name*</label>
-                <input class="register__input" type="text" placeholder="Full Name">
-              </div>
-              <div class="register__label">
-                <label class="register__text">Email*</label>
-                <input class="register__input" type="text" placeholder="example@gmail.com">
-              </div>
-              <div class="register__label">
-                <label class="register__text">Department*</label>
-                <select class="register__input">
-                  <option>Please Select</option>
-                  <option>Technology</option>
-                  <option>Health</option>
-                  <option>Administrative</option>
-                </select>
-              </div>
-              <div class="register__label">
-                <label class="register__text">Time*</label>
-                <input class="register__input" type="text" placeholder="4:00 Available">
-              </div>
-            </div>
-            <div class="register__button">
-              <a class="button button--full" href="#">Book Appointment</a>
-            </div>
+    <footer class="footer">
+      <div class="footer__main">
+        <h1 class="footer__title">Consulting Agency For Your Business</h1>
+        <p class="footer__subtitle">the quick fox jumps over the lazy dog</p>
+        <a class="button" href="#">Contact Us</a>
+      </div>
+      <div class="footer__list">
+        <div>
+          <p class="footer__list__title">Company Info</p>
+          <ul>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">About Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Blog</a>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <p class="footer__list__title">Legal</p>
+          <ul>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">About Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Blog</a>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <p class="footer__list__title">Features</p>
+          <ul>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">About Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+            <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+             <li class="footer__list__subtitle">
+               <a class="footer__list__link" href="#">Blog</a>
+             </li>
+          </ul>
+        </div>
+
+        <div>
+          <p class="footer__list__title">Resources</p>
+          <ul>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">About Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__list__subtitle">
+              <a class="footer__list__link" href="#">Blog</a>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <p class="footer__list__title">Get In Touch</p>
+          <div class="footer__contact">
+            <img src="./images/phone.png">
+            <p class="footer__contact__text">(480) 555-0103</p>
+          </div>
+          <div class="footer__contact">
+            <img src="./images/localizations.png">
+            <p class="footer__contact__text">4517 Washington Ave.</p>
+          </div>
+          <div class="footer__contact">
+            <img src="./images/email.png">
+            <p class="footer__contact__text">debra.holt@example.com</p>
           </div>
         </div>
-      </section>
+      </div>
+      <div class="footer__main">
+        <div>
+          <p class="footer__social__title">Made With Love By Figmaland All Right Reserved</p>
+        </div>
+        <div class="footer__social">
+          <img src="./images/facebook.png">
+          <img src="./images/instagram.png">
+          <img src="./images/twitter.png">
+          <img src="./images/youtube.png">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
