add media queries in footer section

--- a/index.html
+++ b/index.html
@@ -289,9 +289,13 @@
 
     <footer class="footer">
       <div class="footer__main">
-        <h1 class="footer__title">Consulting Agency For Your Business</h1>
-        <p class="footer__subtitle">the quick fox jumps over the lazy dog</p>
-        <a class="button" href="#">Contact Us</a>
+        <div>
+          <h1 class="footer__title">Consulting Agency For Your Business</h1>
+          <p class="footer__subtitle">the quick fox jumps over the lazy dog</p>
+        </div>
+        <div>
+          <a class="button" href="#">Contact Us</a>
+        </div>
       </div>
       <div class="footer__list">
         <div>
@@ -370,7 +374,7 @@
           <p class="footer__list__title">Get In Touch</p>
           <div class="footer__contact">
             <img src="./images/phone.png">
-            <p class="footer__contact__text">(480) 555-0103</p>
+            <a href="tel: +4805550103" class="footer__contact__text">(480) 555-0103</a>
           </div>
           <div class="footer__contact">
             <img src="./images/localizations.png">
