--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           </div>
           <div class="footer__contact">
             <img src="./images/email.png">
-            <p class="footer__contact__text">debra.holt@example.com</p>
+            <a href="mailto:debra.holt@example.com" class="footer__contact__text">debra.holt@example.com</a>
           </div>
         </div>
       </div>
@@ -378,10 +378,10 @@
           <p class="footer__social__title">Made With Love By Figmaland All Right Reserved</p>
         </div>
         <div class="footer__social">
-          <img src="./images/facebook.png">
-          <img src="./images/instagram.png">
-          <img src="./images/twitter.png">
-          <img src="./images/youtube.png">
+          <a href="http://facebook.com"><img src="./images/facebook.png"></img></a>
+          <a href="http://instagram.com"><img src="./images/instagram.png"></img></a>
+          <a href="http://twitter.com"><img src="./images/twitter.png"></img></a>
+          <a href="http://youtube.com"><img src="./images/youtube.png"></img></a>
         </div>
       </div>
     </footer>
